2004-12-14  Angus Leeming  <leeming@lyx.org>

	* os.h, os_os2.C, os_unix.C, os_win32.C:
	(binpath, binname, getTmpDir): return a const reference rather than
	a copy of the data.
	(homepath, nulldev): new functions returning the name of "HOME" and
	the null device, respectively.

	* filetools.C: (ExpandPath, MakeDisplayPath):
	* path_defines.C.in (setLyxPaths): use os::homepath(), not
	GetEnvPath("HOME").

2004-12-14  Angus Leeming  <leeming@lyx.org>

	* os.h, os_{os2,unix,win32}.C (init): change interface to no longer
	pass the addresses of the parameters received by main.

2004-12-14  Angus Leeming  <leeming@lyx.org>

	* copy.C (copy): open the ifstream with ios::binary.

2004-12-14  Angus Leeming  <leeming@lyx.org>

	* os.C: Add _WIN32 to the #define.

	* systemcall.C (startscript): remove trailing '/n' from request to
	start the command in a minimized window under DOS.

2004-12-14  Angus Leeming  <leeming@lyx.org>

	* Makefile.am (AM_CPPFLAGS): Remove trailing slash from -Ifoo/
	to overcome bug in the MinGW port of g++ 3.4.2.

2004-11-26  Angus Leeming  <leeming@lyx.org>

	* globbing.[Ch] (glob): change API to:
	1. Append matches to the input container.
	2. Require a working_dir parameter. The function invokes chdir
	internally (through use of Path).

2004-11-26  Angus Leeming  <leeming@lyx.org>

	* filefilterlist.C (convert_brace_glob): moved here from
	globbing.[Ch].

	* filefilterlist.[Ch]: clean-up FileFilterList API.

	* globbing.[Ch] (convert_brace_glob): moved to filefilterlist.C.
	(expand_globs): moved to xforms/FormFiledialog.C.

2004-11-25  Angus Leeming  <leeming@lyx.org>

	* filefilterlist.[Ch]:
	* globbing.[Ch]: split FileFilterList into its own .[Ch] files.

	* Makefile.am: add filefilterlist.[Ch].

2004-11-16  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* textutils.h (isKommaChar): remove

2004-11-16  Lars Gullik Bjonnes  <larsbj@gullik.net>

	* forkedcontr.C (find_pid): simplify and also make pass concept
	checks.